# Renderer3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Structures/: Camera.cpp  Camera.h  Primitive.cpp  Primitive.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h
